Fix list readablity

--- a/style.css
+++ b/style.css
@@ -27,4 +27,13 @@
 .hamburger-photo3 {
     height: 400px;
 }
+
+.hamburger-photo4 {
+    height: 400px;
+}
+
+ol,
+ul {
+    line-height: 30px;
+}
     
